@@ -19,7 +19,7 @@ smp_config_option="Symmetric Multi-Processing"
 # in the build scripts
 fdisk="fdisk.txt;cfdisk.txt"
 network="supports-tftp;supports-rarp;supports-bootp;supports-nfsroot"
-boot=""
+boot="bootable-usb;isohybrid-supported"
 frontend="newt;not-gtk"
 other="supports-serial-console"
 smp="defaults-smp"
