@@ -2,6 +2,13 @@
 <!-- $Id$ -->
 
 
+  <sect2 arch="arm64" id="boot-dev-select"><title>Boot Device Selection</title>
+
+    <para>
+<!-- placeholder, content to be added -->
+    </para>
+  </sect2>
+
   <sect2 arch="arm" id="arm-firmware-overview"><title>ARM firmware</title>
 
     <para>
