@@ -18,6 +18,8 @@ installation-guide (2017XXXX) UNRELEASED; urgency=medium
   * Fix typo in supported ARM devices section. Closes: #869932
   * Remove support for 'ps' output format, therefore remove depends openjade,
     jadetex, ko.tex-base and cm-super as well. Closes: #871751
+  * Set forgotten conditions 'bootable-usb' and 'isohybrid-supported' for 
+    arm64.
 
   [ Martin Michlmayr ]
   * Remove QNAP TS-109, TS-209 and TS-409 as they are no longer supported.
